tests/ui/borrowck/index-mut-help-with-impl.stderr
error[E0596]: cannot borrow data in a `&` reference as mutable
  --> $DIR/index-mut-help-with-impl.rs:9:5
   |
LL |     Index::index(&v, 1..2).make_ascii_uppercase();
   |     ^^^^^^^^^^^^^^^^^^^^^^ cannot borrow as mutable

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0596`.
